<resources>
    <string name="app_name">CalcMoataz</string>
    <string name="c">C</string>
    <string name="div">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="mun">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="ac">AC</string>
    <string name="_0">0</string>
    <string name="eq">=</string>
    <string name="go_to_calc">Go to calc</string>
    <string name="enter_your_name">Enter Your name</string>
    <string name="go_to_calculator">Go to calculator</string>
</resources>